fadeout loading and fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@ legend > i, caption > i {
 
 #loading {
   display: none;
+  position: relative;
+  z-index: 9999;
 }
 #loading .overlay {
   position: fixed;
